ontol/ontol-compiler/test-cases/error/union/in_named_relationship.on
def foo (
    /// docs
    rel* 'a': text
    /// docs
    rel* 'a': i64 // ERROR union in named relationship is not supported yet. Make a union instead
)
